@@ -1,0 +1,4 @@
+EXTRA_DIST = trietool.1
+
+man_MANS = trietool.1
+
